syntax = "proto2";

package unifyidchallenge;

option java_package = "com.zackmatthews.unifyidchallenge.proto";
option java_outer_classname = "UnifyChallengeProto";

message SensorData {

  required string sensorType = 1;
  repeated float sensorValues = 2;
  required uint64 timestamp = 4;
}

message SensorDataCollection{
  repeated SensorData sensorData = 3;
}

